# cedar-policy-rb

./: .cross_rubies  .gitignore  .rubocop.yml  CHANGELOG.md  Cargo.toml  Gemfile  LICENSE.txt  README.md  Rakefile  cedar_policy.gemspec  commitlint.config.js  package-lock.json  package.json  release-please-config.json
.github/: dependabot.yml
.github/workflows/: main.yml  release-please.yml  release.yml
ext/cedar_policy/: Cargo.toml  extconf.rb
ext/cedar_policy/src/: authorizer.rs  context.rs  decision.rs  diagnostics.rs  entities.rs  entity.rs  entity_uid.rs  error.rs  lib.rs  policy_set.rs  request.rs  response.rs  schema.rs
lib/: cedar_policy.rb
lib/cedar_policy/: context.rb  entities.rb  entity.rb  entity_uid.rb  version.rb
rakelib/: native.rake
sig/: cedar_policy.rbs
spec/: cedar_policy_spec.rb  spec_helper.rb
spec/cedar_policy/: authorizer_spec.rb  decision_spec.rb  entities_spec.rb  entity_spec.rb  entity_uid_spec.rb  policy_set_spec.rb  request_spec.rb  schema_spec.rb
