[package]
name = "cedar_policy"
version = "0.6.2"
edition = "2021"
authors = ["Aotokitsuruya <contact@aotoki.me>"]
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
cedar-policy = "4.9.0"
magnus = "0.8.2"
rb-sys = { version = ">=0.9.113", features = ["stable-api-compiled-fallback"] }
serde_magnus = "0.11.0"
